# ideo-matrix-pro

./: .gitignore  README.md  __init__.py  package-lock.json  package.json  test_chinese_display.py  test_desktop_app.py  test_egui_fonts.rs  test_english_app.py  test_rust_ui.html  vite.config.js
.github/workflows/: build-release.yml  release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: desktop_app.rs  font_test.rs  main.rs  simple_font_test.rs
src-tauri/src/actions/: ab_advanced_replace.rs  ab_blend.rs  ab_chroma.rs  ab_glitch.rs  ab_real_replace.rs  ab_replace.rs  ab_shake.rs  ai_opencv.rs  bitrate.rs  blur.rs  border.rs  bounce.rs  bw.rs  clean.rs  color.rs  corner.rs  crop.rs  cut.rs  denoise.rs  dissolve.rs  encode.rs  flash.rs  fps.rs  grain.rs  lava.rs  mask_video.rs  material_overlay.rs  md5.rs  mirror.rs  mod.rs  mute.rs  noise.rs  pitch.rs  portrait.rs  progressive.rs  pull.rs  rotate.rs  scan.rs  sharpen.rs  speed.rs  (+6 more)
src-tauri/src/core/: ai.rs  factory.rs  ffutils.rs  mod.rs
